--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Projet11</title>
+    <title>Projet11: Ecommerce</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="assests/style.css">
     <link rel="stylesheet" href="assests/tailwind.config.js">
@@ -11,13 +11,13 @@
 
 <body>
     <header class="flex flex-col gap-[1rem]">
-        <nav class="flex items-center gap-[10rem] mt-[1.5rem] ml-[12rem]">
+        <nav class="flex items-center gap-[10rem] mt-[1.5rem] ml-[6rem]">
             <img src="Img/iphone.svg" alt="" class="w-[21rem] h-[6rem]">
             <div class="flex border-gray-400 border-[0.5rem] w-[30rem] h-[5rem]">
                 <img src="Img/Search.svg" alt="recherche" class="w-[2.4rem] l-[2.4rem]">
                 <input type="search" placeholder="Search" class="w-[30rem] outline-none p-2">
             </div>
-            <ul class="flex gap-[8rem] justify-center text-[1.6rem] leading-[1.9rem]"> 
+            <ul class="flex gap-[8rem] justify-center text-[1.6rem] leading-[1.9rem]">
                 <li class="font-bold">Home</li>
                 <li class="font-normal text-gray-400">About</li>
                 <li class="font-normal text-gray-400">Contact us</li>
@@ -25,8 +25,9 @@
             </ul>
             <img src="Img/Icons.svg" alt="icons">
         </nav>
-        <nav class="w-full bg-secondary-color flex gap-[9rem] items-center ml-[5rem] font-normal text-[1.4rem] leading-[3.2rem] mt-[2rem]">
-            <div class="flex gap-[1rem]">
+        <nav
+            class="w-full h-[5rem] bg-secondary-color flex gap-[9rem] items-center font-normal text-[1.4rem] leading-[3.2rem] mt-[2rem]">
+            <div class="flex gap-[1rem] ml-[12.8rem]">
                 <img src="Img/Phones.svg" alt="telephone">
                 <h3>Phones</h3>
             </div>
@@ -55,6 +56,66 @@
 
         </nav>
     </header>
+    <section class="flex items-center justify-center gap-[2rem] w-full bg-gradient">
+        <div class="flex flex-col gap-[2rem] flex-1 ml-[10rem]">
+            <h3 class="font-[60rem] text-[2.5rem] leading-[3.2rem] text-gray-400 font-figtree"> Pro. Beyong</h3>
+            <h1 class="font-[60rem] text-gray-200 text-[9.6rem] leading-[7.2rem]"> IPHONE 14 <span
+                    class="font-bold text-white">Pro</span></h1>
+            <h3 class="font-[50rem] text-[1.8rem] leading-[2.4rem] text-gray-400"> Created to change everything for the
+                better. For everyone</h3>
+            <button
+                class=" w-[18.4rem] h-[5.6rem] border-[0.1rem] border-gray-400 rounded-[0.6rem] text-white text-[1.6rem] gap-[0.8rem] py-[1.2rem] px-[5.4rem] leading-[2.4rem] text-center font-[50rem]">Shop
+                Now</button>
+        </div>
+        <div class="flex-1">
+            <img src="Img/Iphone2.svg" alt="">
+        </div>
+    </section>
+    <section class="flex w-full">
+        <div class="flex flex-col flex-1">
+            <div class="flex gap-[1rem]">
+                <div>
+                <img src="" alt="">
+                </div>
+                <div class="flex flex-col">
+                    <h1> Playstation 5 </h1>
+                    <p></p>
+                </div>
+            </div>
+            <div class="flex">
+                <div class="flex flex-1 gap-[1rem]">
+                    <div>
+                    <img src="" alt="">
+                    </div>
+                    <div class="flex flex-col">
+                        <h1>Apple Airpods Max</h1>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="flex flex-1">
+                    <div>
+                    <img src="" alt="">
+                    </div>
+                    <div class="flex flex-col">
+                        <h1> Apple vision pro</h1>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="flex flex-1">
+            <div class="flex flex-col">
+                <h1>Macbook Air</h1>
+                <p></p>
+                <button
+                class=" w-[18.4rem] h-[5.6rem] border-[0.1rem] border-gray-400 rounded-[0.6rem] text-white text-[1.6rem] gap-[0.8rem] py-[1.2rem] px-[5.4rem] leading-[2.4rem] text-center font-[50rem]">Shop
+                Now</button>
+            </div>
+            <div class="flex-1"> 
+                <img src="" alt=""> 
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
