--- a/index.html
+++ b/index.html
@@ -26,34 +26,36 @@
             <img src="Img/Icons.svg" alt="icons">
         </nav>
         <nav
-            class="w-full h-[5rem] bg-secondary-color flex gap-[9rem] items-center font-normal text-[1.4rem] leading-[3.2rem] mt-[2rem]">
+            class="w-full h-[5rem] bg-secondary-color flex gap-[7rem] items-center font-normal text-[1.4rem] text-gray-400 leading-[3.2rem] mt-[2rem]">
             <div class="flex gap-[1rem] ml-[12.8rem]">
                 <img src="Img/Phones.svg" alt="telephone">
                 <h3>Phones</h3>
             </div>
-            <img src="Img/Devider.svg" alt="">
-            <div class="flex">
-                <img src="Img/Computers.svg" alt="COmputers">
+            <img src="Img/Devider.svg" alt="diviseur">
+            <div class="flex gap-[1rem] ">
+                <img src="Img/Computers.svg" alt="Computers">
                 <h3>Computers</h3>
             </div>
-            <div class="flex">
+            <img src="Img/Devider.svg" alt="diviseur">
+            <div class="flex gap-[1rem] ">
                 <img src="Img/Gaming.svg" alt="Smart washes">
                 <h3>Smart Watches</h3>
             </div>
-            <div class="flex">
+            <img src="Img/Devider.svg" alt="diviseur">
+            <div class="flex gap-[1rem] ">
                 <img src="Img/Cameras.svg" alt="Cameras">
                 <h3>Cameras</h3>
             </div>
-            <div class="flex">
+            <img src="Img/Devider.svg" alt="diviseur">
+            <div class="flex gap-[1rem] ">
                 <img src="Img/Headphones.svg" alt="Headphones">
                 <h3>Headphones</h3>
             </div>
-            <div class="flex">
+            <img src="Img/Devider.svg" alt="diviseur">
+            <div class="flex gap-[1rem] ">
                 <img src="Img/Gaming.svg" alt="Gaming">
                 <h3>Gaming</h3>
             </div>
-
-
         </nav>
     </header>
     <section class="flex items-center justify-center gap-[2rem] w-full bg-gradient">
