--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="assests/style.css">
     <link rel="stylesheet" href="assests/tailwind.config.js">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
     <header class="flex flex-col gap-[1rem]">
-        <nav class="flex items-center gap-[10rem] mt-[1.5rem] ml-[6rem]">
-            <img src="Img/iphone.svg" alt="" class="w-[21rem] h-[6rem]">
+        <nav class="flex items-center gap-[5.5rem] md:gap-[10rem] mt-[1.5rem] ml-[6rem]">
+            <img src="Img/Logo.svg" alt="logo" class="md:hidden">
+            <img src="Img/iphone.svg" alt="iphone" class="w-[21rem] h-[6rem]">
             <div class="flex border-gray-400 border-[0.5rem] w-[30rem] h-[5rem]">
                 <img src="Img/Search.svg" alt="recherche" class="w-[2.4rem] l-[2.4rem]">
                 <input type="search" placeholder="Search" class="w-[30rem] outline-none p-2">
@@ -24,9 +26,10 @@
                 <li class="font-normal text-gray-400">Blog</li>
             </ul>
             <img src="Img/Icons.svg" alt="icons">
+            <span class="material-symbols-outlined md:hidden">menu</span>
         </nav>
         <nav
-            class="w-full h-[5rem] bg-secondary-color flex gap-[7rem] items-center font-normal text-[1.4rem] text-gray-400 leading-[3.2rem] mt-[2rem]">
+            class="w-[100vw] h-[5rem] bg-secondary-color flex gap-[7rem] items-center font-normal text-[1.4rem] text-gray-400 leading-[3.2rem] mt-[2rem]">
             <div class="flex gap-[1rem] ml-[12.8rem]">
                 <img src="Img/Phones.svg" alt="telephone">
                 <h3>Phones</h3>
