--- a/index.html
+++ b/index.html
@@ -5,122 +5,125 @@
     <meta charset="UTF-8">
     <title>Projet11: Ecommerce</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="assests/style.css">
-    <link rel="stylesheet" href="assests/tailwind.config.js">
+    <link rel="stylesheet" href="src/output.css">
+    <link rel="stylesheet" href="assets/CSS/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
-    <header class="flex flex-col gap-[1rem]">
-        <nav class="flex items-center gap-[5.5rem] md:gap-[10rem] mt-[1.5rem] ml-[6rem]">
-            <img src="Img/Logo.svg" alt="logo" class="md:hidden">
-            <img src="Img/iphone.svg" alt="iphone" class="w-[21rem] h-[6rem]">
-            <div class="flex border-gray-400 border-[0.5rem] w-[30rem] h-[5rem]">
-                <img src="Img/Search.svg" alt="recherche" class="w-[2.4rem] l-[2.4rem]">
+    <header class="flex flex-col gap-[1rem] w-full">
+        <nav class="flex items-center gap-[10rem] mt-[1.5rem] ml-[6rem]">
+            <img src="/assets/Img/Logo.svg" alt="logo" class="lg:hidden">
+            <img src="/assets/Img/iphone.svg" alt="iphone" class="lg:w-[21rem] lg:h-[6rem] hidden lg:block">
+            <div class="hidden lg:flex lg:border-gray-400 lg:border-[0.5rem] lg:w-[30rem] lg:h-[5rem]">
+                <img src="assets/Img/Search.svg" alt="recherche" class="w-[2.4rem] l-[2.4rem]">
                 <input type="search" placeholder="Search" class="w-[30rem] outline-none p-2">
             </div>
-            <ul class="flex gap-[8rem] justify-center text-[1.6rem] leading-[1.9rem]">
+            <ul class="nav_links hidden lg:flex lg:gap-[7.6rem] lg:justify-center lg:text-[1.6rem] lg:leading-[1.9rem] w-full">
                 <li class="font-bold">Home</li>
                 <li class="font-normal text-gray-400">About</li>
                 <li class="font-normal text-gray-400">Contact us</li>
                 <li class="font-normal text-gray-400">Blog</li>
             </ul>
-            <img src="Img/Icons.svg" alt="icons">
-            <span class="material-symbols-outlined md:hidden">menu</span>
+            <img src="assets/Img/Icons.svg" alt="icons" class="hidden lg:block mr-[11rem]">
+            <button class="menu">
+            <span class="inline-block lg:hidden material-symbols-outlined ml-[60rem]">menu</span>
+            </button>
         </nav>
         <nav
-            class="w-[100vw] h-[5rem] bg-secondary-color flex gap-[7rem] items-center font-normal text-[1.4rem] text-gray-400 leading-[3.2rem] mt-[2rem]">
+            class="hidden lg:w-full lg:h-[5rem] lg:bg-[#2C2C2C] lg:flex lg:gap-[7rem] lg:items-center lg:font-normal lg:text-[1.4rem] lg:text-gray-400 lg:leading-[3.2rem] lg:mt-[2rem]">
             <div class="flex gap-[1rem] ml-[12.8rem]">
-                <img src="Img/Phones.svg" alt="telephone">
+                <img src="assets/Img/Phones.svg" alt="telephone">
                 <h3>Phones</h3>
             </div>
-            <img src="Img/Devider.svg" alt="diviseur">
+            <img src="assets/Img/Devider.svg" alt="diviseur">
             <div class="flex gap-[1rem] ">
-                <img src="Img/Computers.svg" alt="Computers">
+                <img src="assets/Img/Computers.svg" alt="Computers">
                 <h3>Computers</h3>
             </div>
-            <img src="Img/Devider.svg" alt="diviseur">
+            <img src="assets/Img/Devider.svg" alt="diviseur">
             <div class="flex gap-[1rem] ">
-                <img src="Img/Gaming.svg" alt="Smart washes">
+                <img src="assets/Img/Gaming.svg" alt="Smart washes">
                 <h3>Smart Watches</h3>
             </div>
-            <img src="Img/Devider.svg" alt="diviseur">
+            <img src="assets/Img/Devider.svg" alt="diviseur">
             <div class="flex gap-[1rem] ">
-                <img src="Img/Cameras.svg" alt="Cameras">
+                <img src="assets/Img/Cameras.svg" alt="Cameras">
                 <h3>Cameras</h3>
             </div>
-            <img src="Img/Devider.svg" alt="diviseur">
+            <img src="assets/Img/Devider.svg" alt="diviseur">
             <div class="flex gap-[1rem] ">
-                <img src="Img/Headphones.svg" alt="Headphones">
+                <img src="assets/Img/Headphones.svg" alt="Headphones">
                 <h3>Headphones</h3>
             </div>
-            <img src="Img/Devider.svg" alt="diviseur">
+            <img src="assets/Img/Devider.svg" alt="diviseur">
             <div class="flex gap-[1rem] ">
-                <img src="Img/Gaming.svg" alt="Gaming">
+                <img src="assets/Img/Gaming.svg" alt="Gaming">
                 <h3>Gaming</h3>
             </div>
         </nav>
     </header>
-    <section class="flex items-center justify-center gap-[2rem] w-full bg-gradient">
-        <div class="flex flex-col gap-[2rem] flex-1 ml-[10rem]">
-            <h3 class="font-[60rem] text-[2.5rem] leading-[3.2rem] text-gray-400 font-figtree"> Pro. Beyong</h3>
-            <h1 class="font-[60rem] text-gray-200 text-[9.6rem] leading-[7.2rem]"> IPHONE 14 <span
-                    class="font-bold text-white">Pro</span></h1>
+    <section class="lg:flex lg:items-center lg:justify-center gap-[2rem] mt-[3rem] lg:mt-[0rem] text-center lg:w-full bg-gradient">
+        <div class="flex flex-col gap-[2rem] lg:flex-1 lg:ml-[10rem] mt-[4rem] lg:mt-[0rem]">
+            <h3 class="font-[60rem] text-[2.5rem] leading-[3.2rem] text-gray-400 font-figtree mt-[4rem] lg:mt-[0rem]"> Pro. Beyong</h3>
+            <h1 class="font-[60rem] text-gray-200 text-[9.6rem] leading-[7.2rem]"> IPHONE 14 <br class="block lg:hidden"><span
+                    class="font-bold text-white lg:">Pro</span></h1>
             <h3 class="font-[50rem] text-[1.8rem] leading-[2.4rem] text-gray-400"> Created to change everything for the
-                better. For everyone</h3>
+                better. <br class="block lg:hidden"> For everyone</h3>
             <button
-                class=" w-[18.4rem] h-[5.6rem] border-[0.1rem] border-gray-400 rounded-[0.6rem] text-white text-[1.6rem] gap-[0.8rem] py-[1.2rem] px-[5.4rem] leading-[2.4rem] text-center font-[50rem]">Shop
+                class="lg:mr-[30rem] w-[18.4rem] ml-[41rem] h-[5.6rem] border-[0.1rem] border-gray-400 rounded-[0.6rem] text-white text-[1.6rem] gap-[0.8rem] py-[1.2rem] px-[5.4rem] leading-[2.4rem] text-center font-[50rem]">Shop
                 Now</button>
         </div>
         <div class="flex-1">
-            <img src="Img/Iphone2.svg" alt="">
+            <img src="assets/Img/Iphone2.svg" alt="" class="ml-[33rem] lg:ml-[0rem]">
         </div>
     </section>
     <section class="flex w-full">
         <div class="flex flex-col flex-1">
-            <div class="flex gap-[1rem]">
+            <div class="flex flex-1">
                 <div>
-                <img src="" alt="">
+                <img src="assets/Img/PlayStation.svg" alt="Playstation" class="w-[15rem] h-[15rem]">
                 </div>
-                <div class="flex flex-col">
-                    <h1> Playstation 5 </h1>
-                    <p></p>
+                <div class="flex-col font-bold mt-[4rem]">
+                    <h1 class=" text-black text-[2.5rem] leading-[4rem]"> Playstation 5 </h1>
+                    <p class="text-gray-400 text-[1rem] leading-[2.4rem] w-[28rem]"> Incredibly powerful CPUs, GPUs, and an SSD with integrated I/O will redefine your PlayStation experience.</p>
                 </div>
             </div>
-            <div class="flex">
-                <div class="flex flex-1 gap-[1rem]">
+            <div class="flex flex-1">
+                <div class="flex flex-1 gap-[3rem] w-[6rem] h-[20rem] bg-gray-200">
                     <div>
-                    <img src="" alt="">
+                    <img src="assets/Img/casque.svg" alt="" class="h-[15rem] w-[6rem]">
                     </div>
-                    <div class="flex flex-col">
-                        <h1>Apple Airpods Max</h1>
-                        <p></p>
+                    <div class="flex flex-col font-bold mt-[3rem] w-[20rem]">
+                        <h1 class="text-[2.9rem] text-gray-100 leading-[4rem]">Apple <br><span class="text-[2.9rem] leading-[4rem] text-gray-100">Airpods <span class="text-black">Max</span></span></h1>
+                        <p class="text-gray-400 text-[1rem] leading-[2.4rem] w-[11rem]">Computational audio. Listen, it's powerful</p>
                     </div>
                 </div>
-                <div class="flex flex-1">
+                <div class="flex flex-1 gap-[3rem] bg-gradient w-[30rem]">
                     <div>
-                    <img src="" alt="">
+                    <img src="assets/Img/boxe.svg" alt="">
                     </div>
-                    <div class="flex flex-col">
-                        <h1> Apple vision pro</h1>
-                        <p></p>
+                    <div class="flex flex-col font-bold mt-[3rem] w-[20rem]">
+                        <h1 class="text-[2.9rem] text-gray-200 leading-[4rem]">Apple <br><span class="text-[2.9rem] leading-[4rem] text-gray-200">Airpods <span class="text-white">Max</span></span></h1>
+                        <p class="text-gray-400 text-[1rem] leading-[2.4rem] w-[11rem]">Computational audio. Listen, it's powerful</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="flex flex-1">
-            <div class="flex flex-col">
-                <h1>Macbook Air</h1>
-                <p></p>
+        <div class="flex flex-1 bg-gray-200">
+            <div class="flex flex-col font-normal mt-[11rem]">
+                <h1 class="p-2 ml-[0.8rem] text-[4rem] text-gray-700 leading-[5.6rem]">Macbook <span class="text-[4rem] leading-[5.6rem] text-black">Air</span></h1>
+                <p class="text-gray-400 ml-[1.4rem] text-[1rem] leading-[2.4rem] w-[11rem] mb-[1rem]">Computational audio. Listen, it's powerful</p>
                 <button
-                class=" w-[18.4rem] h-[5.6rem] border-[0.1rem] border-gray-400 rounded-[0.6rem] text-white text-[1.6rem] gap-[0.8rem] py-[1.2rem] px-[5.4rem] leading-[2.4rem] text-center font-[50rem]">Shop
+                class=" w-[15rem] h-[4rem] border-[0.1rem] border-gray-400 rounded-[0.6rem] text-black text-[1.6rem] gap-[0.8rem] leading-[2.4rem] text-center font-[50rem] ml-[2rem]">Shop
                 Now</button>
             </div>
             <div class="flex-1"> 
-                <img src="" alt=""> 
+                <img src="assets/Img/MacBook Pro 14.svg" alt="Mac Pro" class="mt-[5rem] h-[35rem]"> 
             </div>
         </div>
     </section>
+<script src="src/script.js"></script>
 </body>
 
 </html>
