--- a/index.html
+++ b/index.html
@@ -123,6 +123,39 @@
             </div>
         </div>
     </section>
+    <section class="flex flex-col gap-[3rem] w-full mt-[3rem]">
+        <div class="flex gap-[50rem]">
+            <p class="p-2 ml-[2rem] font-normal text-[2.4rem] leading-[3.2rem]">Browse by category</p>
+            <img src="assets/Img/Arrow`s.svg" alt="">
+        </div>
+        <div class="flex gap-[6rem] w-full ml-[1rem]">
+            <div class="flex flex-col bg-gray-200 rounded-[0.5rem] text-[1.2rem] leading-[2.4rem] text-center font-normal w-[28rem] h-[10.5rem]">
+                <img src="assets/Img/Phones2.svg" alt="Smartphones" class="h-[6.3rem] mt-[1rem]">
+                <p>Phone</p>                
+            </div>
+             <div class="flex flex-col bg-gray-200 border-[0.4rem] text-[1.2rem] leading-[2.4rem] text-center font-normal w-[27rem] h-[11rem]">
+                <img src="assets/Img/Smart Watches.svg" alt="Smartwatches" class="w-[4.8rem] h-[4.8rem] ml-[2rem]">
+                <p>smartwatches</p>                
+            </div>
+             <div class="flex flex-col bg-gray-200 border-[0.4rem] text-[1.2rem] leading-[2.4rem] text-center font-normal w-[28rem] h-[10.5rem]">
+                <img src="assets/Img/Cameras2.svg" alt="Cameras" class="w-[4.8rem] h-[4.8rem] ml-[1.6rem] p-2">
+                <p>Cameras</p>                
+            </div>
+             <div class="flex flex-col bg-gray-200 border-[0.4rem] text-[1.2rem] leading-[2.4rem] text-center font-normal w-[30rem] h-[10.5rem]">
+                <img src="assets/Img/Headphones2.svg" alt="Headphones" class="w-[4.8rem] h-[4.8rem] ml-[2rem]">
+                <p>Headphones</p>                
+            </div>
+             <div class="flex flex-col bg-gray-200 border-[0.4rem] text-[1.2rem] leading-[2.4rem] text-center font-normal w-[28rem] h-[10.5rem]">
+                <img src="assets/Img/Computers2.svg" alt="computer" class="w-[4.8rem] h-[4.8rem] ml-[2rem]">
+                <p>Computers</p>                
+            </div>
+             <div class="flex flex-col bg-gray-200 border-[0.4rem] text-[1.2rem] leading-[2.4rem] text-center font-normal w-[30rem] h-[10.5rem]">
+                <img src="assets/Img/Gaming2.svg" alt="gamer" class="w-[4.8rem] h-[4.8rem] ml-[2rem]">
+                <p>Gaming</p>                
+            </div>
+        </div> 
+    </section>
+    
 <script src="src/script.js"></script>
 </body>
 
